// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput error text matches snapshot 1`] = `
<View
  style={
    Object {
      "paddingTop": 18,
    }
  }
  testID="text-input"
>
  <Text
    collapsable={false}
    style={
      Object {
        "color": "#525E75",
        "fontSize": 14,
        "left": 0,
        "position": "absolute",
        "top": 18,
      }
    }
    testID="label"
  >
    My Label
  </Text>
  <TextInput
    keyboardType="email-address"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 1,
          "height": 44,
          "width": "100%",
        },
        Object {
          "fontSize": 15,
        },
        Object {
          "color": "#000000",
        },
        Object {
          "borderColor": "red",
        },
      ]
    }
    testID="input"
    value="Initial text"
  />
  <Text
    style={
      Object {
        "color": "red",
        "fontSize": 10,
        "marginBottom": 10,
      }
    }
    testID="errors"
  >
    Please enter a valid email address.
  </Text>
</View>
`;

exports[`TextInput matches snapshot 1`] = `
<View
  style={
    Object {
      "paddingTop": 18,
    }
  }
  testID="text-input"
>
  <Text
    collapsable={false}
    style={
      Object {
        "color": "#525E75",
        "fontSize": 14,
        "left": 0,
        "position": "absolute",
        "top": 18,
      }
    }
    testID="label"
  >
    My Label
  </Text>
  <TextInput
    keyboardType="email-address"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 1,
          "height": 44,
          "width": "100%",
        },
        Object {
          "fontSize": 15,
        },
        Object {
          "color": "#000000",
        },
        undefined,
      ]
    }
    testID="input"
    value="Initial text"
  />
</View>
`;
